# mslearn-mlops

./: .gitignore  azureml.code-workspace  basic-env-ml.yml  create-env.yml  pyproject.toml  requirements.txt
experimentation/: train-classification-model.ipynb  use_azure_sdk.ipynb
production/data/: basic-dataset-ml.yml
src/: job.yml
src/model/: train.py
