[tool.poetry]
name = "mslearn-mlops"
version = "0.1.0"
description = ""
authors = ["Alex Beckwith <57322567+witzbeck@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mslearn_mlops"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
mlflow = "^2.5.0"
pandas = "^2.0.3"
scikit-learn = "^1.3"
azureml = "^0.2.7"
azureml-mlflow = "^1.52.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
